Changed the policy location to point to Klyff privacy policy

--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -69,9 +69,9 @@
 </style>
 <div id="cookie-notice">
     <div id="cookie-notice-text">
-        <label>Cookie policy</label>
+        <label>Privacy policy</label>
         <span>We use cookies to improve user experience. By continuing to browse this site, you agree the use of cookies, in accordance with our <a
-                href="/cookie-policy/" target="_blank">cookie policy.</a><span class=""></span>
+                href="https://klyff.com/privacy-policy/" target="_blank">privacy policy.</a><span class=""></span>
         </span>
     </div>
     <button id="cookie-notice-accept" class="btn btn-primary btn-sm">Accept</button>
