Modified the cookie-consent.html file to include the new cookie consent banner.

--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -70,7 +70,7 @@
 <div id="cookie-notice">
     <div id="cookie-notice-text">
         <label>Privacy policy</label>
-        <span>We use cookies to improve user experience. By continuing to browse this site, you agree the use of cookies, in accordance with our <a
+        <span>We use cookies to improve user experience. By continuing to browse this site, you agree the use of cookies, in accordance with our company<a
                 href="https://klyff.com/privacy-policy/" target="_blank">privacy policy.</a><span class=""></span>
         </span>
     </div>
