--- a/_includes/head-header.html
+++ b/_includes/head-header.html
@@ -48,7 +48,8 @@
     {% if !page.no_canonical %}
     <link rel="canonical" href="https://thingsboard.io{{page.url}}">
     {% endif %}
-    <link rel="shortcut icon" type="image/png" href="https://img.thingsboard.io/favicon.png">
+    <!-- Introducing Klyff Favicon -->
+    <link rel="shortcut icon" type="image/png" href="https://klyff.com/wp-content/uploads/2024/12/cropped-klyff_favicon-32x32.png">
     {% if page.url == '/' %}
     <link href="/css/critical.css" rel="stylesheet">
     {% elsif page.url contains '/docs/' or cssTag == 'docs' %}
